# bob

./: CMakeLists.txt  auto_change_name.sh  auto_release.sh  bob  cat_classifier.xml  cat_detector.py  classifier.xml  dog_classifier.xml  haarcascade_frontalcatface.xml  haarcascade_frontalcatface_extended.xml  n_bg.txt  objectmarker.rar  p_bg.txt  readme.txt  result.txt
demo/catface_detect/: catface_detect  detect_demo.cpp  detect_demo.cpp~  haarcascade_frontalcatface.xml
demo/humanface_detect/: detect_demo.cpp  detect_demo.cpp~  humanface_detect
harr_classifier/: dog.xml  fox.xml  wolf.xml
lbp_classifier/: dog.xml
src/: detect_demo.cpp  lbp.cpp  lbp.h  sample_create.cpp  sample_create.h
test/: test.txt  test.vec
